<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrincipalActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="181dp"
        android:layout_height="64dp"
        android:layout_marginTop="68dp"
        android:gravity="center"
        android:text="@string/p1Exam"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtpregunta"
        android:layout_width="247dp"
        android:layout_height="74dp"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/txtNpregunta"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/txtNpregunta"
        android:layout_width="369dp"
        android:layout_height="62dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/txtpregunta"
        android:textColor="#26912A"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtpregunta" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="341dp"
        android:layout_height="186dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNpregunta">

        <RadioButton
            android:id="@+id/rdbtnOp1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rdbtnOp1"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rdbtnOp2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rdbtnOp2"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rdbtnOp3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rdbtnOp3"
            android:textSize="20sp" />
    </RadioGroup>

    <Button
        android:id="@+id/btnsiguiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:onClick="Siguiente"
        android:text="@string/btnsiguiente"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.22"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/btnsalir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:onClick="Salir"
        android:text="@string/btnsalir"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.706"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>